feat: Remove support for older NMS versions and simplify resource loading